Fixed dark mode with states/props

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
-    background-color:#232323;
+	background-color:#232323;
+	text-align: center;
 }
 
 /* Inserting a collapsed row between two flex items will make 
